src/test/deca/context/invalid/provided/BadSuperClassName.deca
// DESCRIPTION: Déclaration d'une classe mère avec une mauvais nom de superclasse
// RESULTAT: BadSuperClassName.deca:2:0: Superclass identifier must be a class identifier ! (1.3)
class A extends int{
}
